--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,9 +7,11 @@
     src: url(../fonts/AVENGERS/AVENGEANCE\ HEROIC\ AVENGER\ BD.ttf);
 }
 @font-face {
-    font-family: Comics;
-    src: url(../fonts/COMICS/Comics\ Tricks.ttf);
+    font-family: Avengers;
+    src: url(../fonts/);
 }
+
+
 /* BODY */
 body {
     font-family: Open-Sans;
@@ -83,6 +85,7 @@ li {
 }
 .NavBar {
     background: url(../img/deco-MDC-Comics/bandeau-degrader.jpg);
+    background-size:cover;
 }
 /* .navbar-brand {
     height: 50px; 
@@ -201,7 +204,7 @@ footer p {
     font-family:Avengers ;
 }
 .MDC_comics {
-    height: 10rem;
+   
     align-items: center;
     margin: 2rem;
 }
